--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "NODE_ENV=production webpack -p",
     "build:dev": "NODE_ENV=development webpack-dev-server --inline --hot",
     "ng": "ng",
-    "start": "ng serve",
+    "start": "NODE_ENV=production node server/index.js",
     "test": "ng test",
     "lint": "tslint ./src/**/*.ts -t verbose",
     "e2e": "ng e2e"
@@ -23,31 +23,40 @@
   },
   "homepage": "https://github.com/walterspieler/walterspieler.com#readme",
   "dependencies": {
-    "@angular/animations": "~4.3.1",
+    "@angular/animations": "^4.3.6",
+    "@angular/cdk": "^2.0.0-beta.12",
     "@angular/common": "~4.3.1",
     "@angular/compiler": "~4.3.1",
     "@angular/compiler-cli": "~4.3.1",
     "@angular/core": "~4.3.1",
+    "@angular/flex-layout": "^2.0.0-beta.9",
     "@angular/forms": "~4.3.1",
     "@angular/http": "~4.3.1",
+    "@angular/material": "^2.0.0-beta.12",
     "@angular/platform-browser": "~4.3.1",
     "@angular/platform-browser-dynamic": "~4.3.1",
     "@angular/platform-server": "~4.3.1",
     "@angular/router": "~4.3.1",
     "@angular/upgrade": "~4.3.1",
     "angular-in-memory-web-api": "~0.4.6",
+    "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "express": "^4.16.2",
+    "hammerjs": "^2.0.8",
     "rxjs": "^5.1.0",
     "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.4",
-    "body-parser": "^1.18.2",
-    "express": "^4.16.2"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "^1.3.1",
+    "@ngtools/webpack": "^1.3.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "^2.0.3",
     "@types/node": "^6.0.45",
+    "angular2-template-loader": "^0.6.2",
+    "awesome-typescript-loader": "^3.2.3",
+    "file-loader": "0.11.1",
+    "html-loader": "0.4.5",
     "jasmine": "~2.4.1",
     "jasmine-core": "~2.4.1",
     "karma": "^1.3.0",
@@ -57,8 +66,11 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
     "lodash": "^4.16.2",
+    "node-sass": "^4.5.3",
     "phantomjs-prebuilt": "^2.1.7",
     "protractor": "~5.1.0",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.3",
     "ts-node": "^3.3.0",
     "tslint": "^3.15.1",
     "typescript": "~2.3.2",
