--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Walterspieler.com",
   "main": "server/index.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack -p",
+    "build": "NODE_ENV=production webpack -p -w",
     "build:dev": "NODE_ENV=development webpack-dev-server --inline --hot",
-    "ng": "ng",
-    "start": "NODE_ENV=production node server/index.js",
-    "test": "ng test",
-    "lint": "tslint ./src/**/*.ts -t verbose",
-    "e2e": "ng e2e"
+    "clean": "rimraf build",
+    "start:production": "NODE_ENV=production npm run clean && npm run build && node server/index.js",
+    "start": "NODE_ENV=development npm run clean && npm run build",
+    "test": "karma start --single-run",
+    "test:watch": "karma start"
   },
   "repository": {
     "type": "git",
@@ -45,6 +45,7 @@
     "hammerjs": "^2.0.8",
     "rxjs": "^5.1.0",
     "web-animations-js": "^2.3.1",
+    "tslib": "1.6.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
@@ -57,14 +58,17 @@
     "awesome-typescript-loader": "^3.2.3",
     "file-loader": "0.11.1",
     "html-loader": "0.4.5",
-    "jasmine": "~2.4.1",
+    "jasmine": "^2.4.1",
     "jasmine-core": "~2.4.1",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-spec-reporter": "0.0.31",
+    "karma-webpack": "2.0.3",
     "lodash": "^4.16.2",
     "node-sass": "^4.5.3",
     "phantomjs-prebuilt": "^2.1.7",
