--- a/deployment.yaml
+++ b/deployment.yaml
@@ -11,9 +11,9 @@ spec:
     spec:
       containers:
       - name:                                    walterspieler
-        image:                                   gcr.io/matt-walters/walterspieler.com:v0.0.1
+        image:                                   gcr.io/matt-walters/walterspieler.com:v0.0.2-e
         ports:
-        - containerPort:                         3000
+        - containerPort:                         443
 ---
 apiVersion:                                      v1
 kind:                                            Service
@@ -24,7 +24,8 @@ metadata:
 spec:
   type:                                          NodePort
   ports:
-  - port:                                        3000
+  - port:                                        80
+    targetPort:                                  443
   selector:
     app:                                         walterspieler
 ---
@@ -41,10 +42,10 @@ spec:
         paths:
         - backend:
             serviceName:                         walterspieler-svc
-            servicePort:                         3000
+            servicePort:                         80
     - host:                                      www.walterspieler.com
       http:
         paths:
         - backend:
             serviceName:                         walterspieler-svc
-            servicePort:                         3000
+            servicePort:                         80
