--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "NODE_ENV=production webpack -p -w",
     "build:dev": "NODE_ENV=development webpack-dev-server --inline --hot",
     "clean": "rimraf build",
-    "start:production": "NODE_ENV=production npm run clean && npm run build && node server/index.js",
-    "start": "NODE_ENV=development npm run clean && npm run build",
+    "start:dev": "NODE_ENV=development npm run clean && npm run build:dev",
+    "start": "NODE_ENV=production node server",
     "test": "karma start --single-run",
     "test:watch": "karma start"
   },
@@ -23,61 +23,62 @@
   },
   "homepage": "https://github.com/walterspieler/walterspieler.com#readme",
   "dependencies": {
-    "@angular/animations": "^4.3.6",
-    "@angular/cdk": "^2.0.0-beta.12",
-    "@angular/common": "~4.3.1",
-    "@angular/compiler": "~4.3.1",
-    "@angular/compiler-cli": "~4.3.1",
-    "@angular/core": "~4.3.1",
+    "@angular/animations": "^5.1.2",
+    "@angular/cdk": "^5.0.2",
+    "@angular/common": "~5.1.2",
+    "@angular/compiler": "~5.1.2",
+    "@angular/compiler-cli": "~5.1.2",
+    "@angular/core": "~5.1.2",
     "@angular/flex-layout": "^2.0.0-beta.9",
-    "@angular/forms": "~4.3.1",
-    "@angular/http": "~4.3.1",
-    "@angular/material": "^2.0.0-beta.12",
-    "@angular/platform-browser": "~4.3.1",
-    "@angular/platform-browser-dynamic": "~4.3.1",
-    "@angular/platform-server": "~4.3.1",
-    "@angular/router": "~4.3.1",
-    "@angular/upgrade": "~4.3.1",
-    "angular-in-memory-web-api": "~0.4.6",
+    "@angular/forms": "~5.1.2",
+    "@angular/http": "~5.1.2",
+    "@angular/material": "^5.0.2",
+    "@angular/platform-browser": "~5.1.2",
+    "@angular/platform-browser-dynamic": "~5.1.2",
+    "@angular/platform-server": "~5.1.2",
+    "@angular/router": "~5.1.2",
+    "@angular/upgrade": "~5.1.2",
+    "angular-in-memory-web-api": "~0.5.2",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
+    "express-https-redirect": "^1.0.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.1.0",
+    "tslib": "1.8.1",
     "web-animations-js": "^2.3.1",
-    "tslib": "1.6.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "^1.3.1",
     "@ngtools/webpack": "^1.3.1",
-    "@types/jasmine": "~2.5.53",
+    "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^6.0.45",
+    "@types/node": "^8.5.2",
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^3.2.3",
-    "file-loader": "0.11.1",
-    "html-loader": "0.4.5",
+    "file-loader": "1.1.6",
+    "html-loader": "0.5.1",
     "jasmine": "^2.4.1",
-    "jasmine-core": "~2.4.1",
-    "karma": "^1.7.1",
+    "jasmine-core": "~2.8.0",
+    "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "2.0.3",
+    "karma-spec-reporter": "0.0.32",
+    "karma-webpack": "2.0.9",
     "lodash": "^4.16.2",
     "node-sass": "^4.5.3",
     "phantomjs-prebuilt": "^2.1.7",
-    "protractor": "~5.1.0",
+    "protractor": "~5.2.2",
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.3",
-    "ts-node": "^3.3.0",
-    "tslint": "^3.15.1",
-    "typescript": "~2.3.2",
+    "ts-node": "^4.1.0",
+    "tslint": "^5.8.0",
+    "typescript": "~2.6.2",
     "webpack": "^3.8.1"
   }
 }
