--- a/package.json
+++ b/package.json
@@ -1,84 +1,58 @@
 {
   "name": "walterspieler.com",
-  "version": "0.0.1",
-  "description": "Walterspieler.com",
-  "main": "server/index.js",
+  "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
-    "build": "NODE_ENV=production webpack -p -w",
-    "build:dev": "NODE_ENV=development webpack-dev-server --inline --hot",
-    "clean": "rimraf build",
-    "start:dev": "NODE_ENV=development npm run clean && npm run build:dev",
+    "ng": "ng",
+    "start:dev": "ng serve",
+    "build": "ng build --prod",
     "start": "NODE_ENV=production node server",
-    "test": "karma start --single-run",
-    "test:watch": "karma start"
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/walterspieler/walterspieler.com.git"
-  },
-  "author": "Matt Walterspieler",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/walterspieler/walterspieler.com/issues"
-  },
-  "homepage": "https://github.com/walterspieler/walterspieler.com#readme",
+  "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.2",
-    "@angular/cdk": "^5.0.2",
-    "@angular/common": "~5.1.2",
-    "@angular/compiler": "~5.1.2",
-    "@angular/compiler-cli": "~5.1.2",
-    "@angular/core": "~5.1.2",
-    "@angular/flex-layout": "^2.0.0-beta.9",
-    "@angular/forms": "~5.1.2",
-    "@angular/http": "~5.1.2",
-    "@angular/material": "^5.0.2",
-    "@angular/platform-browser": "~5.1.2",
-    "@angular/platform-browser-dynamic": "~5.1.2",
-    "@angular/platform-server": "~5.1.2",
-    "@angular/router": "~5.1.2",
-    "@angular/upgrade": "~5.1.2",
-    "angular-in-memory-web-api": "~0.5.2",
+    "@angular/animations": "^5.2.1",
+    "@angular/cdk": "^5.1.0",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/flex-layout": "^2.0.0-beta.12",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.1",
+    "@angular/material": "^5.1.0",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/router": "^5.2.0",
+    "@angular/service-worker": "^5.2.0",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
     "express": "^4.16.2",
     "express-https-redirect": "^1.0.0",
     "hammerjs": "^2.0.8",
-    "rxjs": "^5.1.0",
-    "tslib": "1.8.1",
-    "web-animations-js": "^2.3.1",
-    "zone.js": "^0.8.4"
+    "rxjs": "^5.5.6",
+    "zone.js": "^0.8.19"
   },
   "devDependencies": {
-    "@angular/cli": "^1.3.1",
-    "@ngtools/webpack": "^1.3.1",
+    "@angular/cli": "1.6.5",
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/language-service": "^5.2.0",
     "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^8.5.2",
-    "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^3.2.3",
-    "file-loader": "1.1.6",
-    "html-loader": "0.5.1",
-    "jasmine": "^2.4.1",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/node": "~6.0.60",
+    "codelyzer": "^4.0.1",
     "jasmine-core": "~2.8.0",
-    "karma": "^2.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~2.0.0",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-spec-reporter": "0.0.32",
-    "karma-webpack": "2.0.9",
-    "lodash": "^4.16.2",
-    "node-sass": "^4.5.3",
-    "phantomjs-prebuilt": "^2.1.7",
-    "protractor": "~5.2.2",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^6.0.3",
-    "ts-node": "^4.1.0",
-    "tslint": "^5.8.0",
-    "typescript": "~2.6.2",
-    "webpack": "^3.8.1"
+    "protractor": "~5.1.2",
+    "ts-node": "~4.1.0",
+    "tslint": "~5.9.1",
+    "typescript": "~2.5.3"
   }
 }
