--- a/nginx.conf
+++ b/nginx.conf
@@ -6,3 +6,7 @@ server {
     try_files $uri $uri/ /index.html =404;
   }
 }
+server {
+  server_name walterspieler.com;
+  return 301 https://www.walterspieler.com$request_uri;
+}
