--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-brands-svg-icons": "^5.10.2",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
+    "angular-cli-ghpages": "^0.6.0",
     "core-js": "^3.2.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.5.3",
